use local figure for latex

--- a/examples/InterfaceFocus/case1/case1.ipynb
+++ b/examples/InterfaceFocus/case1/case1.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "## Model\n",
     "\n",
-    "![true_system.png](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3638482/bin/rsfs20120084-g3.jpg)\n",
+    "![true_system.png](rsfs20120084-g3.jpg)\n",
     "\n",
     "The system is represented by the following equations:\n",
     "\n",
