--- a/notebooks/toy/pandas-format.ipynb
+++ b/notebooks/toy/pandas-format.ipynb
@@ -472,14 +472,213 @@
     "toy_pkl = pd.read_pickle(\"data/toyModel/df_toydata.pkl\")\n",
     "toy_h5 = pd.read_hdf('data/toyModel/df_toydata.h5', key=\"toy\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "toy = pd.read_hdf(r\"..\\..\\data\\toyModel\\df_toydata.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>t</th>\n",
+       "      <th>s1_mean</th>\n",
+       "      <th>s1_std</th>\n",
+       "      <th>s2_mean</th>\n",
+       "      <th>s2_std</th>\n",
+       "      <th>s3_mean</th>\n",
+       "      <th>s3_std</th>\n",
+       "      <th>s4_mean</th>\n",
+       "      <th>s4_std</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.781604</td>\n",
+       "      <td>0.089666</td>\n",
+       "      <td>0.122618</td>\n",
+       "      <td>0.014113</td>\n",
+       "      <td>0.493386</td>\n",
+       "      <td>0.045112</td>\n",
+       "      <td>0.432902</td>\n",
+       "      <td>0.060928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.735432</td>\n",
+       "      <td>0.096760</td>\n",
+       "      <td>0.213561</td>\n",
+       "      <td>0.032115</td>\n",
+       "      <td>0.382423</td>\n",
+       "      <td>0.023723</td>\n",
+       "      <td>0.418351</td>\n",
+       "      <td>0.050077</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.555506</td>\n",
+       "      <td>0.069964</td>\n",
+       "      <td>0.292101</td>\n",
+       "      <td>0.033800</td>\n",
+       "      <td>0.306729</td>\n",
+       "      <td>0.029330</td>\n",
+       "      <td>0.320487</td>\n",
+       "      <td>0.044707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.508421</td>\n",
+       "      <td>0.054991</td>\n",
+       "      <td>0.322126</td>\n",
+       "      <td>0.029231</td>\n",
+       "      <td>0.310182</td>\n",
+       "      <td>0.043908</td>\n",
+       "      <td>0.282966</td>\n",
+       "      <td>0.035618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.524716</td>\n",
+       "      <td>0.075953</td>\n",
+       "      <td>0.307767</td>\n",
+       "      <td>0.037173</td>\n",
+       "      <td>0.291174</td>\n",
+       "      <td>0.025244</td>\n",
+       "      <td>0.259486</td>\n",
+       "      <td>0.025876</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    t   s1_mean    s1_std   s2_mean    s2_std   s3_mean    s3_std   s4_mean  \\\n",
+       "0   0  0.781604  0.089666  0.122618  0.014113  0.493386  0.045112  0.432902   \n",
+       "1   1  0.735432  0.096760  0.213561  0.032115  0.382423  0.023723  0.418351   \n",
+       "2   3  0.555506  0.069964  0.292101  0.033800  0.306729  0.029330  0.320487   \n",
+       "3   5  0.508421  0.054991  0.322126  0.029231  0.310182  0.043908  0.282966   \n",
+       "4  10  0.524716  0.075953  0.307767  0.037173  0.291174  0.025244  0.259486   \n",
+       "\n",
+       "     s4_std  \n",
+       "0  0.060928  \n",
+       "1  0.050077  \n",
+       "2  0.044707  \n",
+       "3  0.035618  \n",
+       "4  0.025876  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "toy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['t', 's1_mean', 's1_std', 's2_mean', 's2_std', 's3_mean', 's3_std',\n",
+       "       's4_mean', 's4_std'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "toy.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyADAPT.dataset import DataSet\n",
+    "D = DataSet(\n",
+    "        raw_data_path=\"../../data/toyModel/toyData.mat\",\n",
+    "        data_specs_path=\"../../data/toyModel/toyData.yaml\",\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"from Natal van Riel and Christian Tiemann's publication in 2013\""
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D.description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.6 64-bit ('pyADAPT': pipenv)",
    "language": "python",
-   "name": "python3"
+   "name": "python37664bitpyadaptpipenvde74bbefc3494671ae619977801f773b"
   },
   "language_info": {
    "codemirror_mode": {
@@ -491,7 +690,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.6"
   },
   "mimetype": "text/x-python",
   "name": "python",
@@ -500,5 +699,5 @@
   "version": 3
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
