--- a/notebooks/InterfaceFocus/case1/case1.ipynb
+++ b/notebooks/InterfaceFocus/case1/case1.ipynb
@@ -636,9 +636,9 @@
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit ('pyADAPT': pipenv)",
+   "display_name": "pyADAPT (3.7)",
    "language": "python",
-   "name": "python37664bitpyadaptpipenvbdfb3ab6dee845af83de4880b2182147"
+   "name": "pyadapt37"
   },
   "language_info": {
    "codemirror_mode": {
@@ -650,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.2"
   },
   "mimetype": "text/x-python",
   "name": "python",
