--- a/notebooks/sbml/run_trehalose.ipynb
+++ b/notebooks/sbml/run_trehalose.ipynb
@@ -1586,9 +1586,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit ('pyADAPT': pipenv)",
+   "display_name": "pyADAPT (3.7)",
    "language": "python",
-   "name": "python37664bitpyadaptpipenvde74bbefc3494671ae619977801f773b"
+   "name": "pyadapt37"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1600,7 +1600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
