final commit on the code

--- a/Scripts/sbml/compare autoimport and handcoded.ipynb
+++ b/Scripts/sbml/compare autoimport and handcoded.ipynb
@@ -281,9 +281,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit ('pyADAPT': pipenv)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37664bitpyadaptpipenvde74bbefc3494671ae619977801f773b"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -295,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
