--- a/Scripts/sbml/run_trehalose.ipynb
+++ b/Scripts/sbml/run_trehalose.ipynb
@@ -1586,9 +1586,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyADAPT (3.7)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pyadapt37"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1600,7 +1600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
